[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/views/editor/components/spinbox/styles/progress_bar_bg.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/spinbox_button_right_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/views/editor/components/spinbox/spinbox.gd" type="Script" id=3]
[ext_resource path="res://ui/icons/icon_decrease.svg" type="Texture" id=4]
[ext_resource path="res://ui/icons/icon_increase.svg" type="Texture" id=5]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/spinbox_button_left_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/progress_bar_fg.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/spinbox_button_right.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/spinbox_button_left.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/spinbox_button_left_pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://ui/views/editor/components/spinbox/styles/spinbox_button_right_hover.tres" type="StyleBox" id=11]
[ext_resource path="res://ui/themes/fonts/fira_sans_regular.tres" type="DynamicFont" id=12]
[ext_resource path="res://ui/views/editor/components/spinbox/edit_popup.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/common/auto_scale.gd" type="Script" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.156863 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="SpinBox" type="ProgressBar"]
anchor_right = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 95, 24 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = ExtResource( 7 )
custom_styles/bg = ExtResource( 1 )
value = 50.0
allow_greater = true
allow_lesser = true
percent_visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
spinbox_name = "Spinbox"
decrease_button = NodePath("SpinBoxContainer/Decrease")
increase_button = NodePath("SpinBoxContainer/Increase")
name_label = NodePath("SpinBoxContainer/Label")
value_edit = NodePath("SpinBoxContainer/Label/Value")

[node name="SpinBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decrease" type="Button" parent="SpinBoxContainer"]
margin_right = 16.0
margin_bottom = 25.0
rect_min_size = Vector2( 16, 0 )
focus_mode = 0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 14 )
min_size_x = true

[node name="Label" type="Label" parent="SpinBoxContainer"]
margin_left = 16.0
margin_right = 1350.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 12 )
text = "A"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="SpinBoxContainer/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.471939
margin_top = -0.471931
margin_right = -4.52806
margin_bottom = -0.471931
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 12 )
custom_constants/minimum_spaces = 0
text = "50"
align = 2
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Increase" type="Button" parent="SpinBoxContainer"]
margin_left = 1350.0
margin_right = 1366.0
margin_bottom = 25.0
rect_min_size = Vector2( 16, 0 )
focus_mode = 0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 5 )
expand_icon = true
script = ExtResource( 14 )
min_size_x = true

[node name="EditPopup" parent="." instance=ExtResource( 13 )]
visible = false
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="SpinBoxContainer/Label/Value" to="." method="_on_value_gui_input"]
[connection signal="edit_value" from="EditPopup" to="." method="_on_edit_value"]
[connection signal="edit_value_ended" from="EditPopup" to="." method="_on_edit_value_ended"]
[connection signal="edit_value_started" from="EditPopup" to="." method="_on_edit_value_started"]
